tests/compile/userdata_static_with_self.stderr
error: field function must not take `self`
 --> tests/compile/userdata_static_with_self.rs:9:5
  |
9 |     fn get_x(&self) -> mlua::Result<u32> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
